--- a/css/bootstrap_styles.css
+++ b/css/bootstrap_styles.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://use.typekit.net/wpu2spg.css");
 /*!
 * Start Bootstrap - Resume v7.0.3 (https://startbootstrap.com/theme/resume)
 * Copyright 2013-2021 Start Bootstrap
@@ -41,7 +42,7 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 189, 93, 56;
+  --bs-primary-rgb: 151, 27, 230;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
@@ -90,7 +91,7 @@ body {
 
 hr {
   margin: 1rem 0;
-  color: inherit;
+  color: #971be6;
   background-color: currentColor;
   border: 0;
   opacity: 0.25;
@@ -103,10 +104,11 @@ hr:not([size]) {
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
-  font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  /*font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";*/
+  font-family: 'ff-prater-block-web', sans-serif;
   font-weight: 700;
   line-height: 1.2;
-  color: #343a40;
+  color: #971be6;
 }
 
 h1, .h1 {
@@ -236,11 +238,11 @@ sup {
 }
 
 a {
-  color: #bd5d38;
+  color:#971be6;
   text-decoration: underline;
 }
-a:hover {
-  color: #974a2d;
+a:hover, .social-icon:hover {
+    color: rgba(151, 27, 230, 0.2);
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
@@ -2216,7 +2218,7 @@ progress {
   background-color: #fff;
   border-color: #deae9c;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(189, 93, 56, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(151, 27, 230, 0.25);
 }
 .form-control::-webkit-date-and-time-value {
   height: 1.5em;
@@ -2431,7 +2433,7 @@ textarea.form-control-lg {
 .form-select:focus {
   border-color: #deae9c;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(189, 93, 56, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(151, 27, 230, 0.25);
 }
 .form-select[multiple], .form-select[size]:not([size="1"]) {
   padding-right: 0.75rem;
@@ -2498,7 +2500,7 @@ textarea.form-control-lg {
 .form-check-input:focus {
   border-color: #deae9c;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(189, 93, 56, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(151, 27, 230, 0.25);
 }
 .form-check-input:checked {
   background-color: #bd5d38;
@@ -2577,10 +2579,10 @@ textarea.form-control-lg {
   outline: 0;
 }
 .form-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(189, 93, 56, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(151, 27, 230, 0.25);
 }
 .form-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(189, 93, 56, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(151, 27, 230, 0.25);
 }
 .form-range::-moz-focus-outer {
   border: 0;
@@ -3017,7 +3019,7 @@ textarea.form-control-lg {
 }
 .btn-check:focus + .btn, .btn:focus {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(189, 93, 56, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(151, 27, 230, 0.25);
 }
 .btn:disabled, .btn.disabled, fieldset:disabled .btn {
   pointer-events: none;
@@ -3274,7 +3276,7 @@ textarea.form-control-lg {
   border-color: #bd5d38;
 }
 .btn-check:focus + .btn-outline-primary, .btn-outline-primary:focus {
-  box-shadow: 0 0 0 0.25rem rgba(189, 93, 56, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(151, 27, 230, 0.5);
 }
 .btn-check:checked + .btn-outline-primary, .btn-check:active + .btn-outline-primary, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show {
   color: #000;
@@ -3282,7 +3284,7 @@ textarea.form-control-lg {
   border-color: #bd5d38;
 }
 .btn-check:checked + .btn-outline-primary:focus, .btn-check:active + .btn-outline-primary:focus, .btn-outline-primary:active:focus, .btn-outline-primary.active:focus, .btn-outline-primary.dropdown-toggle.show:focus {
-  box-shadow: 0 0 0 0.25rem rgba(189, 93, 56, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(151, 27, 230, 0.5);
 }
 .btn-outline-primary:disabled, .btn-outline-primary.disabled {
   color: #bd5d38;
@@ -3948,7 +3950,7 @@ textarea.form-control-lg {
   }
 }
 .nav-link:hover, .nav-link:focus {
-  color: #974a2d;
+  background-color: rgba(151,27,230, 0.2);
 }
 .nav-link.disabled {
   color: #6c757d;
@@ -4712,7 +4714,7 @@ textarea.form-control-lg {
   z-index: 3;
   border-color: #deae9c;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(189, 93, 56, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(151, 27, 230, 0.25);
 }
 
 .accordion-header {
@@ -4821,7 +4823,7 @@ textarea.form-control-lg {
   color: #974a2d;
   background-color: #e9ecef;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(189, 93, 56, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(151, 27, 230, 0.25);
 }
 
 .page-item:not(:first-child) .page-link {
@@ -5404,7 +5406,7 @@ textarea.form-control-lg {
 }
 .btn-close:focus {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(189, 93, 56, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(151, 27, 230, 0.25);
   opacity: 1;
 }
 .btn-close:disabled, .btn-close.disabled {
@@ -7797,7 +7799,7 @@ textarea.form-control-lg {
 
 .bg-primary {
   --bs-bg-opacity: 1;
-  background-color: rgba(var(--bs-primary-rgb), var(--bs-bg-opacity)) !important;
+  background-color: rgba(247,247,247), var(--bs-bg-opacity) !important;
 }
 
 .bg-secondary {
@@ -11325,6 +11327,8 @@ p.lead {
   font-weight: 800;
   letter-spacing: 0.05rem;
   text-transform: uppercase;
+  color: rgb(151,27,230);
+  font-family: 'ff-prater-block-web', sans-serif !important;
 }
 #sideNav .navbar-toggler:focus {
   outline-color: #d48a6e;
@@ -11351,7 +11355,7 @@ p.lead {
   #sideNav .navbar-brand .img-profile {
     max-width: 10rem;
     max-height: 10rem;
-    border: 0.5rem solid rgba(255, 255, 255, 0.2);
+    border: 0.5rem solid rgba(151,27,230, 0.2);
   }
   #sideNav .navbar-collapse {
     display: flex;
@@ -11377,7 +11381,7 @@ p.lead {
   justify-content: center;
   height: 3.5rem;
   width: 3.5rem;
-  background-color: #495057;
+  background-color: #971be6;
   color: #fff;
   border-radius: 100%;
   font-size: 1.5rem;
@@ -11387,7 +11391,7 @@ p.lead {
   margin-right: 0;
 }
 .social-icons .social-icon:hover {
-  background-color: #bd5d38;
+  background-color: rgba(151, 27, 230, 0.65);
 }
 
 .dev-icons {
