--- a/css/elle.css
+++ b/css/elle.css
@@ -42,7 +42,7 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 151, 27, 230;
+  --bs-primary-rgb: 240,103,172;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
@@ -87,12 +87,12 @@ body {
   background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  background-color: #fff !important;
+  background-color: #f4c6dd !important;
 }
 
 hr {
   margin: 1rem 0;
-  color: #971be6;
+  color: #f067ac;
   background-color: currentColor;
   border: 0;
   opacity: 0.25;
@@ -106,10 +106,10 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
   /*font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";*/
-  font-family: 'ff-prater-block-web', sans-serif;
+  font-family: 'Impact', sans-serif;
   font-weight: 700;
   line-height: 1.2;
-  color: #971be6;
+  color: #f067ac;
 }
 
 h1, .h1 {
@@ -239,11 +239,15 @@ sup {
 }
 
 a {
-  color:#971be6;
+  color: #cb4f65;
   text-decoration: underline;
 }
-a:hover, .social-icon:hover {
-    color: rgba(151, 27, 230, 0.2);
+a:hover{
+    color: #fff;
+}
+
+.social-icon:hover {
+    color: rgba(151,27,230, 0.2);
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
@@ -336,8 +340,8 @@ th {
 .projbutton {
   border-radius: 5px;
   padding: 10px;
-  border: 2px solid #971be6;
-  background-color: #971be6;
+  border: 2px solid #f067ac;
+  background-color:#f067ac;
   color: #fff;
   text-decoration: none;
 }
@@ -345,9 +349,9 @@ th {
 .projbutton:hover {
   border-radius: 5px;
   padding: 10px;
-  border: 2px solid #971be6;
-  background-color: #fff;
-  color: #971be6;
+  border: 2px solid #cb4f65;
+  background-color: #cb4f65;
+  color: #fff;
   text-decoration: underline;
 }
 
@@ -662,48 +666,43 @@ progress {
   margin-left: auto;
 }
 
+
 #togglebox {
-  background-color: rgba(0, 0, 0, 0.8);
-  color: #fff;
-  margin-right: 5%;
-  padding: 5px;
-  position: absolute;
-  right: 0;
-  font-family: Muli, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    margin-right: 5%;
+    padding: 5px;
+    position: absolute;
+    right: 0;
+    font-family: Muli, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
 }
 
-#togglebox p{
-  margin-top: 0;
-    margin-bottom: 1rem;
-    margin-right: 0% !important;
-}
+#FiDi, #Millis, #defaultimage {
+    display: none;
+  }
 
-#FiDi, #Elle, #Millis {
-  display: none;
-}
-
-#defaultsheet {
-  background-color: #fff;
-  color: rgba(151,27,229, 0.7);
-  font-family: 'ff-prater-block-web', sans-serif;
+  #defaultsheet {
+    background-color: #fff;
+    color: rgba(151,27,229, 0.7);
+    font-family: 'ff-prater-block-web', sans-serif;
 }
 
 #ellesheet {
-  background-color: #dd3b6d;
-  color: #fff;
-  font-family:'Impact', serif;
+    background-color: #dd3b6d;
+    color: #fff;
+    font-family:'Impact', serif;
 
 }
 
 #fidisheet {
-  background-color: #000;
-  color: #fff;
-  font-family: 'Times New Roman', serif;
+    background-color: #000;
+    color: #fff;
+    font-family: 'Times New Roman', serif;
 }
 
 #millissheet {
-  background-color: #037156;
-  color: #fbd513;
+    background-color: #037156;
+    color: #fbd513;
 }
 
 @media (min-width: 576px) {
@@ -4543,7 +4542,7 @@ textarea.form-control-lg {
   color: rgba(255, 255, 255, 0.55);
 }
 .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
-  color: rgba(255, 255, 255, 0.75);
+  color: rgb(255, 255, 255) !important;
 }
 .navbar-dark .navbar-nav .nav-link.disabled {
   color: rgba(255, 255, 255, 0.25);
@@ -8029,7 +8028,7 @@ textarea.form-control-lg {
 }
 
 .language-icons {
-  color: #971be6;
+  color: #f067ac;
 }
 
 @media (min-width: 576px) {
@@ -9987,7 +9986,7 @@ textarea.form-control-lg {
 }
 @media screen and (max-width: 992px){
     #sideNav {
-        background-color: #971be6 !important;
+        background-color: #f066ac !important;
         color: #fff;
     }
     #sideNav .navbar-nav .nav-item .nav-link {
@@ -9999,8 +9998,8 @@ textarea.form-control-lg {
         opacity: 0.5;
     }
     #togglebox{
-      margin-top: 12px;
-  }
+        margin-top: 12px;
+    }
 }
 @media (min-width: 1200px) {
   .float-xl-start {
@@ -11364,7 +11363,7 @@ textarea.form-control-lg {
 }
 body {
   padding-top: 3.375rem;
-  color: #6c757d;
+  color: #cb4f65;
 }
 
 @media (min-width: 992px) {
@@ -11411,8 +11410,8 @@ p.lead {
   font-weight: 800;
   letter-spacing: 0.05rem;
   text-transform: uppercase;
-  color: rgb(151,27,230);
-  font-family: 'ff-prater-block-web', sans-serif;
+  color: rgb(240,103,172);
+  font-family: 'Impact', sans-serif;
 }
 #sideNav .navbar-toggler:focus {
   outline-color: #d48a6e;
@@ -11465,7 +11464,7 @@ p.lead {
   justify-content: center;
   height: 3.5rem;
   width: 3.5rem;
-  background-color: #971be6;
+  background-color: #f067ac;
   color: #fff;
   border-radius: 100%;
   font-size: 1.5rem;
@@ -11475,7 +11474,7 @@ p.lead {
   margin-right: 0;
 }
 .social-icons .social-icon:hover {
-  background-color: rgba(151, 27, 230, 0.65);
+  background-color: rgba(151,27,230, 0.2);
 }
 
 .dev-icons {
