--- a/css/millis.css
+++ b/css/millis.css
@@ -42,7 +42,7 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 151, 27, 230;
+  --bs-primary-rgb: 251,213,19;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
@@ -61,7 +61,7 @@
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
   --bs-body-color: #212529;
-  --bs-body-bg: #fff;
+  --bs-body-bg: #037156;
 }
 
 *,
@@ -87,12 +87,11 @@ body {
   background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  background-color: #fff !important;
 }
 
 hr {
   margin: 1rem 0;
-  color: #971be6;
+  color: #fbd513;
   background-color: currentColor;
   border: 0;
   opacity: 0.25;
@@ -106,10 +105,10 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
   /*font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";*/
-  font-family: 'ff-prater-block-web', sans-serif;
+  font-family:  'p22-underground-pc', sans-serif;
   font-weight: 700;
   line-height: 1.2;
-  color: #971be6;
+  color: #fbd513;
 }
 
 h1, .h1 {
@@ -239,11 +238,11 @@ sup {
 }
 
 a {
-  color:#971be6;
+  color:#fbd513;
   text-decoration: underline;
 }
 a:hover, .social-icon:hover {
-    color: rgba(151, 27, 230, 0.2);
+    color: rgba(225,225,225);
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
@@ -336,19 +335,19 @@ th {
 .projbutton {
   border-radius: 5px;
   padding: 10px;
-  border: 2px solid #971be6;
-  background-color: #971be6;
-  color: #fff;
+  border: 2px solid #fbd513;
+  background-color: #fbd513;
+  color: #037156;
   text-decoration: none;
 }
 
 .projbutton:hover {
   border-radius: 5px;
   padding: 10px;
-  border: 2px solid #971be6;
+  border: 2px solid #fff;
   background-color: #fff;
-  color: #971be6;
-  text-decoration: underline;
+  color: #037156;
+  text-decoration: none;
 }
 
 label {
@@ -662,48 +661,43 @@ progress {
   margin-left: auto;
 }
 
+
 #togglebox {
-  background-color: rgba(0, 0, 0, 0.8);
-  color: #fff;
-  margin-right: 5%;
-  padding: 5px;
-  position: absolute;
-  right: 0;
-  font-family: Muli, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    margin-right: 5%;
+    padding: 5px;
+    position: absolute;
+    right: 0;
+    font-family: Muli, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
 }
 
-#togglebox p{
-  margin-top: 0;
-    margin-bottom: 1rem;
-    margin-right: 0% !important;
-}
-
-#FiDi, #Elle, #Millis {
+#FiDi, #Elle, #defaultimage {
   display: none;
 }
 
 #defaultsheet {
-  background-color: #fff;
-  color: rgba(151,27,229, 0.7);
-  font-family: 'ff-prater-block-web', sans-serif;
+    background-color: #fff;
+    color: rgba(151,27,229, 0.7);
+    font-family: 'ff-prater-block-web', sans-serif;
 }
 
 #ellesheet {
-  background-color: #dd3b6d;
-  color: #fff;
-  font-family:'Impact', serif;
+    background-color: #dd3b6d;
+    color: #fff;
+    font-family:'Impact', serif;
 
 }
 
 #fidisheet {
-  background-color: #000;
-  color: #fff;
-  font-family: 'Times New Roman', serif;
+    background-color: #000;
+    color: #fff;
+    font-family: 'Times New Roman', serif;
 }
 
 #millissheet {
-  background-color: #037156;
-  color: #fbd513;
+    background-color: #037156;
+    color: #fbd513;
 }
 
 @media (min-width: 576px) {
@@ -4013,7 +4007,8 @@ textarea.form-control-lg {
   }
 }
 .nav-link:hover, .nav-link:focus {
-  background-color: rgba(151,27,230, 0.2);
+  background-color: rgb(247,247,225);
+  color: #037156 !important;
 }
 .nav-link.disabled {
   color: #6c757d;
@@ -4534,7 +4529,8 @@ textarea.form-control-lg {
 }
 
 .navbar-dark .navbar-brand {
-  color: #fff;
+  color: #037156;
+  font-family: 'p22-underground-pc', sans-serif;
 }
 .navbar-dark .navbar-brand:hover, .navbar-dark .navbar-brand:focus {
   color: #fff;
@@ -4555,6 +4551,7 @@ textarea.form-control-lg {
 .navbar-dark .navbar-toggler {
   color: rgba(255, 255, 255, 0.55);
   border-color: rgba(255, 255, 255, 0.1);
+  background-color: #037156;
 }
 .navbar-dark .navbar-toggler-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
@@ -8029,7 +8026,7 @@ textarea.form-control-lg {
 }
 
 .language-icons {
-  color: #971be6;
+  color: #fed614;
 }
 
 @media (min-width: 576px) {
@@ -9987,20 +9984,22 @@ textarea.form-control-lg {
 }
 @media screen and (max-width: 992px){
     #sideNav {
-        background-color: #971be6 !important;
-        color: #fff;
+        background-color: #fbd513 !important;
+        color: #037156;
+        
     }
     #sideNav .navbar-nav .nav-item .nav-link {
-        color: #fff !important;
+        color: #037156 !important;
         font-family: Muli, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji !important;
         
     }
     .nav-link:hover {
         opacity: 0.5;
     }
+
     #togglebox{
-      margin-top: 12px;
-  }
+        margin-top: 12px;
+    }
 }
 @media (min-width: 1200px) {
   .float-xl-start {
@@ -11364,7 +11363,7 @@ textarea.form-control-lg {
 }
 body {
   padding-top: 3.375rem;
-  color: #6c757d;
+  color: #fff;
 }
 
 @media (min-width: 992px) {
@@ -11411,8 +11410,8 @@ p.lead {
   font-weight: 800;
   letter-spacing: 0.05rem;
   text-transform: uppercase;
-  color: rgb(151,27,230);
-  font-family: 'ff-prater-block-web', sans-serif;
+  color: rgb(251,213,19);
+  font-family: 'p22-underground-pc', sans-serif;
 }
 #sideNav .navbar-toggler:focus {
   outline-color: #d48a6e;
@@ -11439,7 +11438,7 @@ p.lead {
   #sideNav .navbar-brand .img-profile {
     max-width: 10rem;
     max-height: 10rem;
-    border: 0.5rem solid rgba(151,27,230, 0.2);
+    border: 0.5rem solid rgba(251,213,18, 0.8);
   }
   #sideNav .navbar-collapse {
     display: flex;
@@ -11465,7 +11464,7 @@ p.lead {
   justify-content: center;
   height: 3.5rem;
   width: 3.5rem;
-  background-color: #971be6;
+  background-color: #fbd513;
   color: #fff;
   border-radius: 100%;
   font-size: 1.5rem;
@@ -11475,7 +11474,7 @@ p.lead {
   margin-right: 0;
 }
 .social-icons .social-icon:hover {
-  background-color: rgba(151, 27, 230, 0.65);
+  background-color: rgba(251,213,19, 0.65);
 }
 
 .dev-icons {
