--- a/css/bootstrap_styles.css
+++ b/css/bootstrap_styles.css
@@ -10000,12 +10000,24 @@ textarea.form-control-lg {
     }
     #togglebox{
       margin-top: 12px;
+      width: 100%;
+      /*padding-left: 10%;*/
+      text-align: center;
+      text-transform: uppercase;
+      margin-right: 0;
   }
+  }
+  .portfolio-section {
+    padding-top: 7rem !important;
+} 
+  
 }
 @media (min-width: 1200px) {
   .float-xl-start {
     float: left !important;
   }
+
+  
 
   .float-xl-end {
     float: right !important;
@@ -11507,4 +11519,8 @@ section.portfolio-section .portfolio-section-content {
     padding-top: 5rem;
     padding-bottom: 5rem;
   }
+}
+
+@media screen and (min-width: 600px)  {
+  .mobile-break { display: none; }
 }
