--- a/css/millis.css
+++ b/css/millis.css
@@ -9999,6 +9999,14 @@ textarea.form-control-lg {
 
     #togglebox{
         margin-top: 12px;
+        width: 100%;
+        /*padding-left: 10%;*/
+        text-align: center;
+        text-transform: uppercase;
+        margin-right: 0;
+    }
+    .portfolio-section {
+        padding-top: 7rem !important;
     }
 }
 @media (min-width: 1200px) {
