--- a/css/bootstrap_styles.css
+++ b/css/bootstrap_styles.css
@@ -243,7 +243,7 @@ a {
   text-decoration: underline;
 }
 a:hover, .social-icon:hover {
-    color: rgba(151, 27, 230, 0.2);
+    background-color: rgba(151, 27, 230, 0.2);
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
