--- a/css/bootstrap_styles.css
+++ b/css/bootstrap_styles.css
@@ -11523,4 +11523,8 @@ section.portfolio-section .portfolio-section-content {
 
 @media screen and (min-width: 600px)  {
   .mobile-break { display: none; }
+  .projbutton{
+    font-size: 12px;
+  }
+  
 }
