Updated font siźe for buttons in mobile

--- a/css/bootstrap_styles.css
+++ b/css/bootstrap_styles.css
@@ -11523,8 +11523,10 @@ section.portfolio-section .portfolio-section-content {
 
 @media screen and (min-width: 600px)  {
   .mobile-break { display: none; }
-  .projbutton{
-    font-size: 12px;
-  }
   
+}
+@media screen and (max-width: 600px)  {
+.projbutton{
+  font-size: 12px;
+}
 }
