--- a/css/millis.css
+++ b/css/millis.css
@@ -11515,3 +11515,9 @@ section.portfolio-section .portfolio-section-content {
     padding-bottom: 5rem;
   }
 }
+
+@media screen and (max-width: 600px)  {
+  .projbutton{
+    font-size: 12px;
+  }
+}
