Added more mobile style edits

--- a/css/bootstrap_styles.css
+++ b/css/bootstrap_styles.css
@@ -11521,10 +11521,10 @@ section.portfolio-section .portfolio-section-content {
   }
 }
 
-/*@media screen and (min-width: 600px)  {
+@media screen and (min-width: 600px)  {
   .mobile-break { display: none; }
   
-}*/
+}
 @media screen and (max-width: 600px)  {
 .projbutton{
   font-size: 12px;
