--- a/css/styles.css
+++ b/css/styles.css
@@ -47,23 +47,10 @@ body{
 }
 
 
-
-
-
-
-
-
-
-
-
-
 #socialNav li{
    list-style-type: none;
    padding: .5em 0;
 }
-
-
-
 
 .siteNav{
   
@@ -418,6 +405,10 @@ footer a{
    font-size: 1.13em;
 }
 
+#thisgroup{
+   display:none;
+}
+
 /*MOBILE LAYOUT - TABLET*/
 @media only screen and (max-width: 1230px){
 
@@ -527,7 +518,7 @@ footer a{
 
    .ham-menu span {
       height: 3px;
-      width: 10%;
+      width: 5%;
       background-color: #000;
       border-radius: 25px;
       position: absolute;
@@ -616,16 +607,62 @@ footer a{
 
 
 @media only screen and (max-width: 600px){
+   .off-screen-menu.off-screen-menu.active{
+      max-width:100%;
+      height: 50vh;
+      transition:height 0.3s ease;
+      transform: translateY(0);
+      padding-bottom:2.5em;
+   }
+
+   .ham-menu.active span{
+      position: absolute;
+      margin-bottom: 2em;
+   }
+
+   .ham-menu.active span {
+      background-color: black;
+      
+      position: fixed !important;
+  }
+
+   #mobileNav ul{
+      margin-top: 5em;
+   }
+
+   #thisgroup{
+      margin-top: 0;
+   }
+   
+
+   #socialNav{
+
+      display:none;
+   }
+
+   #mobileSocials {
+      display:flex;
+      flex-direction: row;
+      margin-top:-.5em;
+   }
+
+   #mobileSocials a{
+      width:2rem;
+   }
+   
    .laic{
        display:none;
    }
    .tllom{
        display: block !important;
    }
-
+   #defaultimage {
+      width:150px;
+      height:150px;
+   }
 
    #myskills {
-       padding: 0 8em;
+       padding: 0 2.5em;
    }
 
 
@@ -637,6 +674,16 @@ footer a{
    #expertise {
        padding-bottom: 10em;
    }
+
+   #row2 {
+      display: flex;
+      flex-direction: column;
+  }
+
+  .col2 {
+   margin-left: 1em;
+   margin-top: 1em;
+}
 
 
 }
