--- a/css/styles.css
+++ b/css/styles.css
@@ -606,9 +606,7 @@ footer a{
       background-image: linear-gradient(to right, #FFE66D 50%, #fbcaef 50%);
    }
 
-   #ux-mobileNav{
-      background-image: #000;
-   }
+  
 
 
    .off-screen-menu {
@@ -654,17 +652,7 @@ footer a{
       transition: .3s ease;
    }
 
-   .ux-ham-menu span {
-      height: 3px;
-      width: 5%;
-      background-color: #fff;
-      border-radius: 25px;
-      position: absolute;
-      left: 50%;
-      top: 50%; 
-      transform: translate(-50%, -50%);
-      transition: .3s ease;
-   }
+   
 
 
    .ham-menu span:nth-child(1) {
@@ -682,15 +670,12 @@ footer a{
       position:fixed;
    }
 
-   .ux-ham-menu.active span {
-      background-color: #fff;
-      position:fixed;
-   }
-   .ham-menu.active span:nth-child(1) {
+   
+   .ham-menu.active span:nth-child(1){
       top: 10%;
       transform: translate(-50%, -50%) rotate(45deg);
    }
-   .ham-menu.active span:nth-child(2) {
+   .ham-menu.active span:nth-child(2){
       opacity: 0;
    }
    .ham-menu.active span:nth-child(3) {
@@ -754,6 +739,7 @@ footer a{
    .button{
       display: block !important;
       white-space: nowrap !important;
+      text-align: center;
       }
 
    #project{
